--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,32 @@ requires-python = ">=3.11"
 dependencies = [
     "crewai>=0.102.0",
     "crewai-tools>=0.36.0",
+    "docformatter>=1.7.5",
     "langchain>=0.3.19",
+    "langgraph>=0.3.29",
     "python-docx>=1.1.2",
     "python-dotenv>=1.0.1",
     "streamlit>=1.42.2",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+    "ruff>=0.11.5",
+]
+
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+line_length = 100
+
+[tool.docformatter]
+recursive = true
+wrap-summaries = 100
+wrap-descriptions = 100
+black = true
+in-place = true
