--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "crewai>=0.102.0",
-    "crewai-tools>=0.36.0",
-    "docformatter>=1.7.5",
-    "langchain>=0.3.19",
-    "langgraph>=0.3.29",
-    "python-docx>=1.1.2",
-    "python-dotenv>=1.0.1",
-    "streamlit>=1.42.2",
+    "crewai>=0.118.0",
+    "crewai-tools>=0.43.0",
+    "fastapi>=0.115.12",
+    "langgraph>=0.4.1",
+    "python-dotenv>=1.1.0",
+    "streamlit>=1.45.0",
 ]
 
 [dependency-groups]
@@ -20,6 +18,7 @@ dev = [
     "black>=25.1.0",
     "isort>=6.0.1",
     "ruff>=0.11.5",
+    "docformatter>=1.7.5",
 ]
 
 
